tests/syntax_tests/data/parsing/errors/typeDef/recordMutable.res
type d = {
  foo: string, mutable
}
